fix: page layout bug

--- a/apps/client/src/app/pages/waiting-for-review/waiting-for-review.component.css
+++ b/apps/client/src/app/pages/waiting-for-review/waiting-for-review.component.css
@@ -1,5 +1,5 @@
 .container {
-	height: 100%;
+	height: calc(100vh - 120px);
 	width: 100%;
 	display: flex;
 	flex-direction: column;
